fix: overflow horizontal by using aos animation

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,6 +24,7 @@ body {
 }
 
 section {
+  overflow-x: hidden;
   padding: 5rem 0;
 }
 
